styles/styles.css
/* ... */
#top-design-reads a:visited {
  color: #a192f9;
}

#top-cms a:link {
  color: #f8f6ff;
}

#top-cms a:hover {
  color: #429f46;
  text-decoration: underline;
  text-decoration-style: double bold;
}

#top-cms a:visited {
  color: #a192f9;
}

.to-top {
  text-align: center;
  padding: 3rem;
}

.to-top a:hover {
  color: #429f46;
  text-decoration: underline;
}

.to-top a:link {
  color: #2400b4;
  text-decoration: none;
}

.hand-coding {
  padding: 0rem;
}

.hand-code {
  text-align: center;
  color: #3f3f3f;
  padding: 0rem;
}

/*MOBILE GENERAL TEXT*/

h1 {
  font-family: "IBM Plex Sans Condensed", sans-serif;
  font-size: 4.4rem;
  font-weight: 300;
}

h2 {
  font-family: "IBM Plex Sans Condensed", sans-serif;
  font-size: 3.2rem;
  font-weight: 300;
  text-transform: capitalize;
}

h3 {
  font-family: "IBM Plex Serif", serif;
  font-size: 2.6rem;
  text-transform: capitalize;
}

h4 {
  font-family: "IBM Plex Sans Condensed", sans-serif;
  font-size: 1.8rem;
  font-weight: 700;
}

h5 {
  font-family: "IBM Plex Sans Condensed", sans-serif;
  font-size: 1.6rem;
}

h6 {
  font-family: "IBM Plex Sans Condensed", sans-serif;
  font-size: 1.4rem;
}

p {
  color: #3f3f3f;
  font-family: "IBM Plex Serif", serif;
  font-size: 1.8rem;
  line-height: 1.5;
  margin: 0 auto;
  max-width: 80rem;
  text-align: left;
}

li {
  font-family: "IBM Plex Sans Condensed", sans-serif;
  font-size: 1.6rem;
  line-height: 1.4;
  padding-top: 1rem;
}

.external-site {
  font-family: "IBM Plex Serif", serif;
  font-size: 1.8rem;
  text-decoration: none;
}

/*IMAGES*/
img {
  height: auto;
  max-width: 100%;
}

.hero, .select-ux-projects, .hand-codin.cms-overviewg, .cms-initial-research, .cms-problem, .cms-problem-solved, .cms-end-result, .cms-hifi{
  padding: 2rem;
}

.design-reads-hero, .project-introduction, .case-study-problem-and-solution, .dicovery, .case-study-competitve-analysis, .case-study-user-research, .case-study-survey-results, .survey-data, .white, .body-container .storyboarding, .information-architecture, .case-study-user-stories, .case-study-user-flows, .case-study-lo-fidelity-wireframes, .case-study-mid-fidelity-wireframes, .case-study-testing-results, .iteration-flex, .visual-design, .case-study-title, .case-study-hi-fidelity-wireframes, .final-design, .case-study-final-prototype, .case-study-conclusion {
  padding: 2rem;
}



/*BUTTONS*/


.button {
  background-color: #dbd7f2;
  border: solid;
  border-color: #dbd7f2;
  border-radius: 2rem;
  color: #0e0b06;
  font-size: 1.8rem;
  line-height: 2.6rem;
  margin-bottom: 2rem;
  margin-top: 2rem;
  outline: none;
  padding-top: 1rem;
  padding-bottom: 1rem;
  text-align: center;
  text-transform: capitalize;
  width: 26.6rem;
}

.button:hover {
  background-color: #c5e1f3;
  border-color: #c5e1f3;
  color: #0e0b06;
  outline: none;
}

.village-button-box {
  text-align: center;
}

/*FOOTER*/

footer {
  background-color: #0e0e0e;
}

.contact-info {
  align-items: center;
  display: grid;
  grid-gap: 5rem;
  grid-template-columns: repeat(3, 1fr);
  padding: 3rem 0;
  text-align: center;
}

/* 404 error */

.error-grid {
  align-items: center;
  display: grid;
}
.error-header {
  color: #006604;
  padding: 3rem;
  text-align: center;
}
.obi-wan {
  display: block;
  margin-left: auto;
  margin-right: auto;
  padding: 1rem;
}

.not-the-page {
  padding: 3rem 2rem;
}

.not-the-page a:visited {
  color: #a192f9;
  text-transform: uppercase;
}

.not-the-page a:hover {
  color: #429f46;
  font-weight: 700;
  text-decoration: none;
}

.move-along {
  padding: 3rem 0rem;
  text-align: center;
}


/*LANDING PAGE*/

/*2025 UPDATES*/
/*LANDING PAGE UPDATES*/

.upcoming-work{
  background-color: #0e0e0e;
  padding-top: 12rem;
  padding-bottom: 12rem;
}

.project-landing-text p{
  color: #0e0e0e;
}

.project-landing-text h3 {
  color: #0e0e0e;
}

.project-landing-text h4{
  color: #0e0e0e;
}

.hero-wrap p{
  color: #0e0b06;
}


.upcoming-work h2{
  color: #acacac;
  font-weight: 700;
  text-align: center;
  padding-bottom: 5rem;
}

.upcoming-work p{
  color: #acacac;
  text-align: center;
}

.text-and-image-box{
  display: flex;
  flex-direction: column;
}

#bunk-and-dad{
  border-radius: 50%;
}

.case-studies {
  background-color: #0e0b06;
}
.individual-landing-box {
  padding-top: 4rem;
  padding-bottom: 4rem;
}

.about-me{
  /*background-color: #f0f0f0;*/
  background-color: #0e0e0e;
}

.about-me h2, h3, h4, p{
color: #afadad;
}

.hand-coding{
  padding: 4rem 0;
}

.landing-section-header h2 {
  color: #afafaf; 
}

.about-me h2{
  padding-bottom: 2rem;
}

.about-me p{
  padding-bottom: 4rem;
}


/*TEST PAGE*/

/* 2025 CASE STUDIES */
/* DEVPORTAL */
/*desktop*/

.case-study-container-developerportal{
 /*TODO: Add BG COLOR*/
 background-color: #f0f0f0;
}

.case-study-hero{
padding: 4rem 12rem;
}


.project-overview, .project-parameters, .project-research, .project-user-flows, .project-ux-designs, .project-design-system, .project-handoff-and-support, .project-reflections {
  padding: 4rem 12rem;
  border-top: #acacac;
  border-style: solid;
  border-width: .5rem;
}

.project-problem {
  padding-top: 6rem;
  padding-bottom: 2rem;
}

.project-timelines, .project-requirements, .design-deliverables{
  padding-top: 2rem;
  padding-bottom: 2rem;
}

.header-and-list h3{
  padding-bottom: 2rem;
}

.header-and-text h2, h3{
  padding-bottom: 2rem;
}

.header-and-list li{
  padding-left: 2rem;
}

.header-and-text p{
  padding-left: 2rem;
}

.project-problem, .project-challenge, .project-parameters, .project-comp-analysis, .project-user-research{
padding-top: 4rem;
}


.cms-landing-grid,
.design-reads-landing-grid{
  padding-top: 3rem;
}

.project-landing-text {
  padding: 3rem 0;
}

.project-landing-text h3 {
  padding-bottom: 1rem;
}

.project-landing-text h4 {
  padding-top: 2rem;
  text-decoration: underline;
}

.project-link {
  padding-top: 4rem;
}

.project-landing-text li {
  font-weight: 300;
}
/* ... */

